deploy/openshift/managef.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
    project: mf
spec:
  type: LoadBalancer
  ports:
  - name: tcp
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    app: worker
    project: mf
spec:
  type: LoadBalancer
  ports:
  - name: tcp
    protocol: TCP
    port: 50051
    targetPort: 50051
  selector:
    app: worker
---
apiVersion: v1
kind: Route
metadata:
  name: api
  labels:
    app: api
    project: mf
spec:
  to:
    kind: Service
    name: api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
    project: mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      name: api
      labels:
        app: api
        project: mf
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxAvailable: 1
      type: RollingUpdate
    spec:
      serviceAccount: api
      containers:
      - image: ${IMAGE_NAME}:${IMAGE_VERSION}
        name: api
        command:
        - "/opt/managef/managef_api"
        - "-v"
        - "${VERBOSE_MODE}"
        ports:
          - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
    project: mf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      name: worker
      labels:
        app: worker
        project: mf
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxAvailable: 1
      type: RollingUpdate
    spec:
      serviceAccount: api
      containers:
      - image: ${IMAGE_WORKER_NAME}:${IMAGE_WORKER_VERSION}
        name: worker
        command:
        - "/opt/managef/managef_worker"
        - "-v"
        - "${VERBOSE_MODE}"
        ports:
          - containerPort: 50051
